--- a/css/tufte.css
+++ b/css/tufte.css
@@ -1,66 +1,11 @@
 @charset "UTF-8";
 
-/* Import ET Book styles
-   adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
-
-@font-face { font-family: "et-book";
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.eot");
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.woff") format("woff"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.svg#etbookromanosf") format("svg");
-             font-weight: normal;
-             font-style: normal; }
-
-@font-face { font-family: "et-book";
-             src: url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.eot");
-             src: url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.svg#etbookromanosf") format("svg");
-             font-weight: normal;
-             font-style: italic; }
-
-@font-face { font-family: "et-book";
-             src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-             src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
-             font-weight: bold;
-             font-style: normal; }
-
-@font-face { font-family: "et-book-roman-old-style";
-             src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-             src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
-             font-weight: normal;
-             font-style: normal; }
-
-/* New fonts I'm trying to add -- First one is newthought 500 weight */
-@font-face { font-family: "fira-sans";
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.eot");
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.woff") format("woff"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.svg#etbookromanosf") format("svg");
-             font-weight: bolder;
-             font-style: normal; }
-
-/* New fonts I'm trying to add -- First one is newthought 500 weight */
-@font-face { font-family: "fira-sans-largest";
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.eot");
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.woff") format("woff"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.svg#etbookromanosf") format("svg");
-             font-weight: bolder;
-             font-style: normal; }
-
-/*!
-* Font Awesome Free 5.2.0 by @fontawesome - https://fontawesome.com
-* License - https://fontawesome.com/license (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
-*/
-             @font-face {
-               font-family: 'Font Awesome 5 Free';
-               font-style: normal;
-               font-weight: 900;
-               src: url("../webfonts/fa-solid-900.eot");
-               src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
-
-             .fa,
-             .fas {
-               font-family: 'Font Awesome 5 Free';
-               font-size: 1.0rem;
-               vertical-align: 10%;
-               font-weight: 900; }
-
-
-
+.fa,
+.fas {
+font-family: 'Font Awesome 5 Free';
+font-size: 1.0rem;
+vertical-align: 10%;
+font-weight: 900; }
 
 /* Tufte CSS styles */
 html { font-size: 12px; }
@@ -69,7 +14,6 @@ body { width: 87.5%;
        margin-left: auto;
        margin-right: auto;
        padding-left: 12.5%;
-       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
        background-color: #fefefe;
        color: #414141;
        max-width: 1400px;
@@ -79,7 +23,8 @@ h1 { font-weight: 400;
      margin-top: 4rem;
      margin-bottom: 1.5rem;
      font-size: 2.0rem;
-     line-height: 1; }
+     line-height: 1; 
+}
 
 h2 {
      font-weight: 400;
@@ -89,19 +34,12 @@ h2 {
      color: #7BAFD4;
      line-height: 1;
      letter-spacing: 1px;
-                      }
+}
 
 h3 { width: 55%;
        font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-       max-width: 1400px; }
-
-
-/*  font-style: italic;
-     font-weight: 400;
-     font-size: 1.7rem;
-     margin-top: 2rem;
-     margin-bottom: 1.4rem;
-     line-height: 1; } */
+       max-width: 1400px; 
+}
 
 /* Special first word bolded in a paragraph */
  h4 { font-weight: 800;
