--- a/css/tufte.css
+++ b/css/tufte.css
@@ -4,40 +4,40 @@
    adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
 
 @font-face { font-family: "et-book";
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.eot");
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.woff") format("woff"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.svg#etbookromanosf") format("svg");
+             src: url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.eot");
+             src: url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.eot?#iefix") format("embedded-opentype"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.woff") format("woff"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.ttf") format("truetype"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-200.svg#etbookromanosf") format("svg");
              font-weight: normal;
              font-style: normal; }
 
 @font-face { font-family: "et-book";
-             src: url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.eot");
-             src: url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.svg#etbookromanosf") format("svg");
+             src: url("./et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.eot");
+             src: url("./et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.eot?#iefix") format("embedded-opentype"), url("./et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.woff") format("woff"), url("./et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.ttf") format("truetype"), url("./et-book/et-book-display-italic-old-style-figures/fira-sans-v8-latin-200italic.svg#etbookromanosf") format("svg");
              font-weight: normal;
              font-style: italic; }
 
 @font-face { font-family: "et-book";
-             src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-             src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
+             src: url("./et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
+             src: url("./et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("./et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("./et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("./et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
              font-weight: bold;
              font-style: normal; }
 
 @font-face { font-family: "et-book-roman-old-style";
-             src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-             src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
+             src: url("./et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
+             src: url("./et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("./et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("./et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("./et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
              font-weight: normal;
              font-style: normal; }
 
 /* New fonts I'm trying to add -- First one is newthought 500 weight */
 @font-face { font-family: "fira-sans";
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.eot");
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.woff") format("woff"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.svg#etbookromanosf") format("svg");
+             src: url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.eot");
+             src: url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.eot?#iefix") format("embedded-opentype"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.woff") format("woff"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.ttf") format("truetype"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-500.svg#etbookromanosf") format("svg");
              font-weight: bolder;
              font-style: normal; }
 
 /* New fonts I'm trying to add -- First one is newthought 500 weight */
 @font-face { font-family: "fira-sans-largest";
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.eot");
-             src: url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.woff") format("woff"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.svg#etbookromanosf") format("svg");
+             src: url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.eot");
+             src: url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.eot?#iefix") format("embedded-opentype"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.woff") format("woff"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.ttf") format("truetype"), url("./et-book/et-book-roman-line-figures/fira-sans-v8-latin-700.svg#etbookromanosf") format("svg");
              font-weight: bolder;
              font-style: normal; }
 
