--- a/css/tufte.css
+++ b/css/tufte.css
@@ -4,19 +4,19 @@
 * Font Awesome Free 5.2.0 by @fontawesome - https://fontawesome.com
 * License - https://fontawesome.com/license (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
 */
-             @font-face {
-               font-family: 'Font Awesome 5 Free';
-               font-style: normal;
-               font-weight: 900;
-               src: url("../webfonts/fa-solid-900.eot");
-               src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+@font-face {
+ font-family: 'Font Awesome 5 Free';
+ font-style: normal;
+ font-weight: 900;
+ src: url("../webfonts/fa-solid-900.eot");
+ src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
-             .fa,
-             .fas {
-               font-family: 'Font Awesome 5 Free';
-               font-size: 1.0rem;
-               vertical-align: 10%;
-               font-weight: 900; }
+.fa,
+.fas {
+ font-family: 'Font Awesome 5 Free';
+ font-size: 1.0rem;
+ vertical-align: 10%;
+ font-weight: 900; }
 
 /* Tufte CSS styles */
 html { font-size: 12px; }
@@ -31,40 +31,35 @@ body { width: 87.5%;
        max-width: 1400px;
        counter-reset: sidenote-counter; }
 
-h1 { font-weight: 400;
-     margin-top: 4rem;
-     margin-bottom: 1.5rem;
-     font-size: 2.0rem;
-     line-height: 1; }
+h1 { 
+    font-family: 'Open Sans', sans-serif;
+    color: #414141;
+    font-weight: 400;
+    margin-top: 4rem;
+    margin-bottom: 1.5rem;
+    font-size: 2.0rem;
+    line-height: 1; }
 
 h2 {
-     font-weight: 400;
-     margin-top: 2.1rem;
-     margin-bottom: 1.4rem;
-     font-size: 1.4rem;
-     color: #7BAFD4;
-     line-height: 1;
-     letter-spacing: 1px;
+   font-family: 'Open Sans', sans-serif;
+   color: #414141;
+   font-weight: 400;
+   margin-top: 2.1rem;
+   margin-bottom: 1.4rem;
+   font-size: 1.4rem;
+   line-height: 1;
+   letter-spacing: 1px;
                       }
 
-h3 { width: 55%;
-       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-       max-width: 1400px; }
+h3 { 
+    font-family: 'Open Sans', sans-serif;;
+    color: #414141; 
+       }
 
-
-/*  font-style: italic;
-     font-weight: 400;
-     font-size: 1.7rem;
-     margin-top: 2rem;
-     margin-bottom: 1.4rem;
-     line-height: 1; } */
-
-/* Special first word bolded in a paragraph */
- h4 { font-weight: 800;
-      font-size: 1.4rem;
-      margin-top: 0rem;
-      margin-bottom: 0rem;
-      font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif; }
+h4 {
+    font-family: 'Open Sans', sans-serif;
+    color: #414141;
+  }
 
 
 hr { display: block;
@@ -101,9 +96,13 @@ p, ol, ul { font-size: 1.5rem;
             line-height: 2.2rem; }
 
 p { margin-top: .5rem;
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
     padding-right: 0;
     vertical-align: baseline; }
+
+p.paragraph {
+
+}
 
 /* Chapter Epigraphs */
 div.epigraph { margin: 5em 0; }
