--- a/css/tufte.css
+++ b/css/tufte.css
@@ -34,31 +34,35 @@ body { width: 87.5%;
 h1 { 
     font-family: 'Open Sans', sans-serif;
     color: #414141;
-    font-weight: 400;
+    font-weight: 600;
+    font-size: 2em;
     margin-top: 4rem;
-    margin-bottom: 1.5rem;
-    font-size: 2.0rem;
+    margin-bottom: 1em;
     line-height: 1; }
 
 h2 {
    font-family: 'Open Sans', sans-serif;
    color: #414141;
    font-weight: 400;
+   font-size: 1.5em;
    margin-top: 2.1rem;
-   margin-bottom: 1.4rem;
-   font-size: 1.4rem;
+   margin-bottom: 1em;
    line-height: 1;
    letter-spacing: 1px;
                       }
 
 h3 { 
     font-family: 'Open Sans', sans-serif;;
-    color: #414141; 
-       }
+    color: #414141;
+    font-size: 1.17em;
+    }
 
 h4 {
     font-family: 'Open Sans', sans-serif;
+    font-weight:300;
     color: #414141;
+    font-size:1em;
+
   }
 
 
@@ -95,7 +99,7 @@ section { padding-top: 1rem;
 p, ol, ul { font-size: 1.5rem;
             line-height: 2.2rem; }
 
-p { margin-top: .5rem;
+p { margin-top: 1rem;
     margin-bottom: 1rem;
     padding-right: 0;
     vertical-align: baseline; }
